# cspice-cmake

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cspice-config.cmake.in
.circleci/: config.yml
.conda/: build.sh  meta.yaml
install_test/lib/cmake/cspice/: cspice-config-version.cmake  cspice-config.cmake  cspice_export-debug.cmake  cspice_export.cmake
src/cspice/: fio.h
src/cspice/sys/: times.h
test/: test_cspice.c
tools/: install_deps.sh  install_travis.sh
tools/conda.build/: build.sh
